tests/positive/Reachability/O.juvix
module O;

import M open public;
import Stdlib.Data.Bool open;

k : Bool;
k := true;
