tests/negative/230/Foo.juvix
module Foo;

import Foo.Data.Bool open;

